--- a/assets/style.css
+++ b/assets/style.css
@@ -1,42 +1,99 @@
-/* I added a border to my photo */
-.bordered-image {
-    border: 6px solid black;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.container {
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: rgb(185, 185, 185);
+}
+
+header {
+    background-color: #333;
+    padding: 20px;
+}
+
+nav ul {
+    list-style: none;
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%;
 }
-h1 {
-    font-family: "Pacifico", cursive; 
-    text-align: center;
-    font-size: 60px;
-    }
-    /* I liked the effect of the links being active/hover */
-a:link, a:visited {
-    background-color: rgb(100, 161, 158);
-    color: rgb(2, 22, 22);
-    border: 2px solid green;
-    border-radius: 10px;
+
+nav li {
+    margin: 0 10px;
+}
+
+nav a {
+    border-radius: 50px;
     padding: 10px 15px;
-    text-align: center;
+    background-color: #555;
+    color: #fff;
     text-decoration: none;
-    display: inline-block;
-  }
-  a:hover, a:active {
-    background-color: rgb(26, 115, 110);
-    color: rgb(212, 130, 130);
-  }
-body {
-    background: turquoise;
-    font-family:'Times New Roman', Times, serif
 }
-section {
-    background-color: aquamarine;
+
+nav a:hover {
+    background-color: #a78861; /* Sets the background color on hover */
 }
-.link-container {
-    justify-content: space-evenly;
+
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 40px;
+}
+
+.work-gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 20px;
+}
+
+.work-gallery img {
+    transition: transform 0.3 ease;
+    width: 100%;
+    height: auto;
+    border: 1px solid #ccc;
+}
+
+.work-gallery img:hover {
+    transform: scale(1.1);
+}
+
+.featured-image {
+    width: 100%;
+    height: auto;
+    border: 2px solid #555;
+}
+
+@media (max-width: 768px) {
+    .container {
+        padding: 20px;
+    }
+}
+.footer-nav {
     display: flex;
-    align-items: flex-end;
+    justify-content: flex-end;
+    list-style: none;
+    padding: 20;
+    margin: 2%;
+  }
+  
+  .footer-nav li {
+    margin-right: 10px;
+  }
+  
+  .footer-nav li:last-child {
+    margin-right: 0;
+  }
+  
+  .footer-nav a {
+    border-radius: 50px; 
+    padding: 10px 15px; 
+    background-color: #333; 
+    color: #fff; 
+    text-decoration: none;
+}
+
+.footer-nav a:hover {
+    background-color: #555; 
 }
