--- a/assets/style.css
+++ b/assets/style.css
@@ -10,8 +10,18 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #706f6f;
     padding: 20px;
+}
+
+h1 {
+    font-size: 36px;
+}
+
+/* Moved the header links to the right top corner */
+nav {
+    display: flex;
+    justify-content: flex-end;
 }
 
 nav ul {
@@ -33,15 +43,19 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #a78861; /* Sets the background color on hover */
+    background-color: #a78861;
 }
 
 .container {
     max-width: 960px;
     margin: 0 auto;
     padding: 40px;
+
 }
 
+.container img {
+    border: 7px solid #ccc; 
+}
 .work-gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -49,14 +63,16 @@ nav a:hover {
 }
 
 .work-gallery img {
-    transition: transform 0.3 ease;
+    transition: transform 0.3s ease;
     width: 100%;
     height: auto;
-    border: 1px solid #ccc;
+    border: 5px solid #ccc;
+    border-radius: 5px; 
 }
 
 .work-gallery img:hover {
     transform: scale(1.1);
+    border-color: #333;
 }
 
 .featured-image {
@@ -65,35 +81,30 @@ nav a:hover {
     border: 2px solid #555;
 }
 
-@media (max-width: 768px) {
-    .container {
-        padding: 20px;
-    }
-}
 .footer-nav {
     display: flex;
     justify-content: flex-end;
     list-style: none;
-    padding: 20;
+    padding: 20px;
     margin: 2%;
-  }
-  
-  .footer-nav li {
+}
+
+.footer-nav li {
     margin-right: 10px;
-  }
-  
-  .footer-nav li:last-child {
+}
+
+.footer-nav li:last-child {
     margin-right: 0;
-  }
-  
-  .footer-nav a {
-    border-radius: 50px; 
-    padding: 10px 15px; 
-    background-color: #333; 
-    color: #fff; 
+}
+
+.footer-nav a {
+    border-radius: 50px;
+    padding: 10px 15px;
+    background-color: #333;
+    color: #fff;
     text-decoration: none;
 }
 
 .footer-nav a:hover {
-    background-color: #555; 
+    background-color: #555;
 }
